--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <link rel="icon" href="assets/images/favicon.jpg">
+    <!-- <link rel="icon" href="assets/images/favicon.jpg"> -->
 
 </head>
 
@@ -31,7 +31,7 @@
         <nav class="navbar navbar-expand-lg navigation-wrap">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/images/logo.png" alt="" class="logo">
+                    <img src="assets/images/yourcompany.png" alt="" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -608,8 +608,7 @@
                     <div class="col-sm-12">
                         <div class="footer-copy">
                             <div class="copy-right text-center pt-5">
-                                <p class="text-light"> Developed with ❤ by Keerti <br>&copy; Copyright 2023 | Developed
-                                    by Keerti Vishwkarma | All rights reserved.</p>
+                                <p style="line-height: 1.2;">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.pawartechnologyservices.com/" target="_blank">PTS</a></p>
                             </div>
                         </div>
                     </div>
